# internal/infrastructure/security/bcrypt_hasher.go
@@ -1,0 +1,27 @@
+package security
+
+import "golang.org/x/crypto/bcrypt"
+
+type BcryptHasher struct {
+	cost int
+}
+
+func NewBcryptHasher(cost int) *BcryptHasher {
+	return &BcryptHasher{cost: cost}
+}
+
+func (h *BcryptHasher) Hash(password string) (string, error) {
+	bytes, err := bcrypt.GenerateFromPassword(
+		[]byte(password),
+		h.cost,
+	)
+	return string(bytes), err
+}
+
+func (h *BcryptHasher) Compare(hash, password string) bool {
+	err := bcrypt.CompareHashAndPassword(
+		[]byte(hash),
+		[]byte(password),
+	)
+	return err == nil
+}
